--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,14 +2,16 @@ server {
   listen 80 default_server;
   server_name towebsite-pakobar7sq-de.a.run.app;
 
-  client_max_body_size 500M;
-
   access_log /home/to-website/logs/nginx_access.log;
   error_log /home/to-website/logs/nginx_error.log;
 
   location /static/ {
       alias  /home/to-website/static/ ;  # static的根目錄位置
   }
+
+  proxy_read_timeout 600s;
+  client_max_body_size 500m;
+  client_body_timeout 10m;
 
   location / {
       include proxy_params;
