--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,8 +1,7 @@
 django==3.2.5
 gunicorn==20.1.0
-mysqlclient==2.1.0
-django-ckeditor==6.2.0
-google-cloud-storage==2.1.0
-django-storages==1.12.3
-Pillow==9.1.1
+pyodbc==4.0.32
+mssql-django==1.0
 python-dotenv==0.20.0
+requests==2.28.0
+Pillow==9.1.1
